@@ -2,6 +2,8 @@ Revision history for Dist-Zilla-PluginBundle-DAGOLDEN
 
 {{$NEXT}}
 
+    - Add 'no_minimum_perl' parameter
+
 0.044     2013-03-26 15:47:58 America/New_York
 
     - Add Encoding plugin to Pod::Weaver
